--- a/modelo_ca.html
+++ b/modelo_ca.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campo Harmônico</title>
+    <title>Calculadora Musical</title>
     <link rel="stylesheet" href="style_ca.css">
 </head>
+
 <body>
     <header>
-        <h1>Campo Harmônico</h1>
+        <h2>Calculadora Musical:</h2>
+        <h2>Campo Harmônico</h2>
     </header>
     <section id="section">
         <div id="inputs">
-            <strong>
-            <p>Escolha sua escala/modo: 
-            <select id="select"></select></p>
-            <p>Mostrar acordes: 
-            <input type="checkbox" id="acordes" onclick="cores(null, 'LIMPAR')"></p>
-            <p>Mostrar sétimas: 
-            <input type="checkbox" id="setimas" onclick="cores(null, 'LIMPAR')"></p>
-            <br>
-            </strong>
+            <div>
+                <label for="select">Escolha sua escala/modo:</label>
+                <select id="select"></select>
+            </div>
+            <div>
+                <label for="acordes">Mostrar acordes:</label>
+                <input type="checkbox" id="acordes" onclick="cores(null, 'LIMPAR')">
+            </div>
+            <div>
+                <label for="setimas">Mostrar sétimas:</label>
+                <input type="checkbox" id="setimas" onclick="cores(null, 'LIMPAR')">
+            </div>
         </div>
         <div id="notas">
-            <strong>Clique no tom pra ver as notas da escala:</strong>
-            <br><br>
+            <p>Clique no tom pra ver as notas da escala:</p>
         </div>
     </section>
     <footer>
-        <p>@yanmano_</p>
+        <a href="https://www.instagram.com/yanmano_/">@yanmano_</a>
     </footer>
     <script src="script_ca.js"></script>
 </body>
+
 </html>
